--- a/scripts/R57_Cazyme_Early_Samples.Rmd
+++ b/scripts/R57_Cazyme_Early_Samples.Rmd
@@ -51,7 +51,7 @@ plot_data <- combined_df %>%
 
 ```
 
-# assemble 
+
 
 ```{r}
 
@@ -102,7 +102,7 @@ plot_data %>%
   ggplot(aes(x = fold_change_low_vs_high, y = fct_reorder(substrate, fold_change_low_vs_high), fill =substrate_name)) +
   geom_col() + 
   labs(
-    x = "Fold Change CAZyme Low vs High Intake Group",
+    x = "Log 10 Low/High Intake Group CAZyme RPM",
     y = "CAZyme Substrate",
     fill = "Cazyme Significance"
   ) +
@@ -112,9 +112,9 @@ plot_data %>%
   guides(fill = guide_legend(nrow = 2, byrow = TRUE))
 
 
-#ggsave('../data/R37_covariates_contribution.pdf',
-#      width = 8.5, height = 11, units = "in", device = 'pdf', 
-#      dpi = 300)       
+ggsave('../results/R57_cazyme_fold_dif_low_vs_high.pdf',
+      width = 8.5, height = 4, units = "in", device = 'pdf', 
+      dpi = 300)       
 ```
 ```{r}
 plot_data %>%
@@ -142,10 +142,16 @@ plot_data %>%
   labs(
     x = "RPM Cazyme Low Intake Group",
     y = "RPM Cazyme High Intake Group",
-    color = "Cazyme Significance"
+    color = "Cazyme Substrate Identity"
   ) +
   theme_minimal(base_size = 14) + #
   theme(legend.position = "bottom") +
   theme(axis.text.y = element_blank())+
-  guides(fill = guide_legend(nrow = 2, byrow = TRUE))
+  guides(color = guide_legend(nrow = 2, byrow = TRUE))
+
+ggsave('../results/R57_cazyme_low_vs_high_scatterplot.pdf',
+     width =5 , height = 5.7, units = "in", device = 'pdf', 
+      dpi = 300)       
 ```
+
+
